--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.12.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
