--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.19",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.0"
   },
