--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "autoprefixer": "^10.4.7",
     "gatsby": "^4.25.8",
     "gatsby-plugin-gdpr-cookies": "^2.0.9",
+    "gatsby-plugin-google-tagmanager": "^4.25.0",
     "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-manifest": "^4.24.0",
     "gatsby-plugin-netlify": "^5.1.1",
-    "gatsby-plugin-offline": "^5.24.0",
     "gatsby-plugin-postcss": "^5.24.0",
     "gatsby-plugin-purgecss": "^6.2.1",
     "gatsby-plugin-react-helmet": "^5.24.0",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sharp": "^4.24.0",
     "gatsby-source-filesystem": "^4.24.0",
     "gatsby-transformer-sharp": "^4.24.0",
@@ -50,7 +51,7 @@
     "type": "git",
     "url": "https://github.com/eacastel/segurat-summa"
   },
-    "engines": {
+  "engines": {
     "node": ">=20 <21"
   }
 }
